--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGO_URL = "mongodb+srv://rajatbhaskare:rajat12345@tutorialmongo.cy0s1y8.mongodb.net/?retryWrites=true&w=majority"
-PORT = 3000
+JWT_SECRET ="secret"
+PORT = 3001
